--- a/module2-solution/css/main.css
+++ b/module2-solution/css/main.css
@@ -1,28 +1,117 @@
 
-/********** Base styles **********/
-
-h1 {
+h2 {
   text-align: center;
   font-size: 75px;
   
+}
+
+p {
+  border: 1px solid black;
+  background-color: #FF69B4;
+  width: 90%;
+  height: 150px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Helvetica;
+  color: white;
+  padding-bottom: 10px;
+ 
+}
+
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+}
+
+.title{
+	  float: right;
+	  padding:10px;
+	   border: 1px solid black;
+	font-family: Helvetica;
+	font-weight: bold;
+	
+	
+  }
+  
+  .first{
+	  background-color:#2196F3;
+  }
+  .second{
+	   background-color:#ff9800;
+  }
+  .third{
+	  background-color:#04AA6D;
+  }
+  
+  .description {
+    margin-top:20px; 
+    padding-left:10px; 
+    display:inline-block;
+	 
+  }
+/********** Mobile devices only **********/
+@media  min-width: 400px) and (max-width: 767px) {
+ .col-lg-3 {
+    float: left;
+  
+  }
+
+  .col-lg-3 {
+    width: 100%;
+  }
+  
+  .col-lg-6 {
+    width: 100%;
+  }
+  .div{
+  float : right;
+  }
+  .title{
+  float: right;
+  }
+}
+
+
+/********** Tablet devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+ .col-lg-3 {
+    float: left;
+   
+  }
+
+  .col-lg-3 {
+    width: 50%;
+  }
+  
+  .col-lg-6 {
+    width: 50%;
+  }
+  .div{
+  float : right;
+  }
+  .title{
+  float: right;
+  }
 }
 
 
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
+ .col-lg-3 {
+    float: left;
+    border: 1px;
+  }
 
-  .box {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-   grid-template-rows: auto;
-	 
-  gap: 1rem;
+  .col-lg-3 {
+    width: 33%;
+  }
   
-
-
-   
-}
-
-
+  .col-lg-6 {
+    width: 33%;
+  }
+  .div{
+  float : right;
+  }
+  
 }
